[gd_scene load_steps=24 format=3 uid="uid://lpo80w41r0i5"]

[ext_resource type="PackedScene" uid="uid://dxm6o7rhv0xn5" path="res://blender/casa2.blend" id="1_l15ec"]
[ext_resource type="Script" path="res://assets/scripts/scr_scene3.gd" id="2_2khkj"]
[ext_resource type="Material" uid="uid://bfwowt3633pif" path="res://assets/materials/mat_Teto.tres" id="2_53dwn"]
[ext_resource type="Material" uid="uid://dovgyyegtvyig" path="res://assets/materials/mat_Exterior.tres" id="3_v8r6i"]
[ext_resource type="Material" uid="uid://dpih7jfyyvdhg" path="res://assets/materials/mat_Madeira.tres" id="5_0wphs"]
[ext_resource type="Material" uid="uid://cu7r81td18y6k" path="res://assets/materials/mat_PisoDeAzulejo.tres" id="6_fph0e"]
[ext_resource type="Material" uid="uid://bb1tjxx3tbadv" path="res://assets/materials/mat_Vrido.tres" id="7_0giub"]
[ext_resource type="Material" uid="uid://cj1aind6y1lfw" path="res://assets/materials/mat_Azulejo.tres" id="7_mlxf4"]
[ext_resource type="Script" path="res://assets/scripts/scr_Espelho.gd" id="11_khdaq"]
[ext_resource type="AudioStream" uid="uid://8w32v8u6d2vg" path="res://assets/audio/sfx/sfx_glass.mp3" id="12_0konw"]
[ext_resource type="Material" uid="uid://cir8q5tpnrmtu" path="res://assets/materials/mat_Metal.tres" id="12_b63ux"]
[ext_resource type="AudioStream" uid="uid://0566yve5gotd" path="res://assets/audio/mus/mus_Time.mp3" id="13_kxgny"]
[ext_resource type="Script" path="res://assets/scripts/scr_porta.gd" id="13_ye7kl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_prwmd"]
size = Vector3(0.769165, 2.08411, 0.0393066)

[sub_resource type="BoxShape3D" id="BoxShape3D_eey5f"]
size = Vector3(1, 2.71887, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ewfvh"]
size = Vector3(0.757141, 1.20306, 0.133667)

[sub_resource type="BoxShape3D" id="BoxShape3D_q2pcb"]
size = Vector3(4.46777, 0.504028, 2.26733)

[sub_resource type="BoxShape3D" id="BoxShape3D_lvsy2"]
size = Vector3(3.6333, 1, 0.388062)

[sub_resource type="BoxShape3D" id="BoxShape3D_2qic7"]
size = Vector3(2.54211, 1, 0.0994263)

[sub_resource type="BoxShape3D" id="BoxShape3D_00tyy"]
size = Vector3(0.424347, 1, 1.88936)

[sub_resource type="BoxShape3D" id="BoxShape3D_kf405"]
size = Vector3(0.455826, 1, 0.0799198)

[sub_resource type="Animation" id="Animation_0nsea"]
resource_name = "arm_PortaSuiteBanheiroAction"
length = 0.416667
tracks/0/type = "rotation_3d"
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/path = NodePath("arm_PortaSuiteBanheiro/Skeleton3D:Bone")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, -0.0199587, 0, 0.999801, 0.0333333, 1, 0, -0.0199587, 0, 0.999801, 0.0666667, 1, 0, -0.0533814, 0, 0.998574, 0.1, 1, 0, -0.109852, 0, 0.993948, 0.133333, 1, 0, -0.182416, 0, 0.983222, 0.166667, 1, 0, -0.267407, 0, 0.963584, 0.233333, 1, 0, -0.449225, 0, 0.893419, 0.266667, 1, 0, -0.529768, 0, 0.848143, 0.3, 1, 0, -0.597961, 0, 0.801525, 0.333333, 1, 0, -0.651601, 0, 0.758562, 0.366667, 1, 0, -0.684771, 0, 0.728758, 0.4, 1, 0, -0.701439, 0, 0.71273, 0.416667, 1, 0, -0.707107, 0, 0.707107)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yvkny"]
_data = {
"arm_PortaSuiteBanheiroAction": SubResource("Animation_0nsea")
}

[node name="Scene3" instance=ExtResource("1_l15ec")]
script = ExtResource("2_2khkj")

[node name="arm_PortaSuiteBanheiro" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.74553, 1.05, -1.44688)

[node name="PortaSuiteBanheiro" parent="arm_PortaSuiteBanheiro/Skeleton3D" index="0"]
surface_material_override/0 = ExtResource("5_0wphs")
surface_material_override/1 = ExtResource("12_b63ux")

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="arm_PortaSuiteBanheiro/Skeleton3D" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.379461, 0, 0)
bone_name = "Bone"
bone_idx = 0

[node name="PortaSuiteBanheiro" type="StaticBody3D" parent="arm_PortaSuiteBanheiro/Skeleton3D/BoneAttachment3D" index="0" groups=["Interactable"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("13_ye7kl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="arm_PortaSuiteBanheiro/Skeleton3D/BoneAttachment3D/PortaSuiteBanheiro" index="0" groups=["Collision"]]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, -0.376691)
shape = SubResource("BoxShape3D_prwmd")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="arm_PortaSuiteBanheiro/Skeleton3D/BoneAttachment3D/PortaSuiteBanheiro" index="1"]
bus = &"SmallReverb"

[node name="Casa_Normal" parent="." index="1"]
surface_material_override/0 = ExtResource("2_53dwn")
surface_material_override/1 = ExtResource("3_v8r6i")
surface_material_override/2 = ExtResource("5_0wphs")
surface_material_override/3 = ExtResource("6_fph0e")
surface_material_override/4 = ExtResource("7_mlxf4")
surface_material_override/5 = ExtResource("7_0giub")

[node name="Casa_Espelho" parent="." index="2"]
layers = 16
surface_material_override/0 = ExtResource("2_53dwn")
surface_material_override/1 = ExtResource("6_fph0e")
surface_material_override/2 = ExtResource("7_mlxf4")

[node name="Stand_Here" type="Area3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.16345, 0.497502, -0.698858)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stand_Here" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.859436, 0)
shape = SubResource("BoxShape3D_eey5f")

[node name="Espelho" type="StaticBody3D" parent="." index="4" groups=["Espelho", "Interactable"]]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.32073, 1.44028, -1.4461)
script = ExtResource("11_khdaq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Espelho" index="0"]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0235291, 0.0340881, 0.0043335)
shape = SubResource("BoxShape3D_ewfvh")

[node name="Quebrado" type="AudioStreamPlayer3D" parent="Espelho" index="1"]
process_mode = 3
stream = ExtResource("12_0konw")
volume_db = 6.0
max_db = 6.0
bus = &"SmallReverb"

[node name="Mus_End" type="AudioStreamPlayer" parent="Espelho" index="2"]
stream = ExtResource("13_kxgny")
bus = &"MUS"

[node name="Collisions" type="Node3D" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.66556, 0, 0.418307)

[node name="Chao" type="StaticBody3D" parent="Collisions" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.03262)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Collisions/Chao" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.247986, 0)
shape = SubResource("BoxShape3D_q2pcb")

[node name="Parede" type="StaticBody3D" parent="Collisions" index="1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Collisions/Parede" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0568848, 0.471485, -0.0213013)
shape = SubResource("BoxShape3D_lvsy2")

[node name="Parede2" type="StaticBody3D" parent="Collisions" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.99148)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Collisions/Parede2" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.602478, 0.471485, 0.123016)
shape = SubResource("BoxShape3D_2qic7")

[node name="Parede3" type="StaticBody3D" parent="Collisions" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.50817, 0, -1.14724)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Collisions/Parede3" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.181351, 0.471485, 0.19709)
shape = SubResource("BoxShape3D_00tyy")

[node name="Parede4" type="StaticBody3D" parent="Collisions" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.03244, 0, -1.14724)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Collisions/Parede4" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.181351, 0.471485, 0.19709)
shape = SubResource("BoxShape3D_00tyy")

[node name="Parede5" type="StaticBody3D" parent="Collisions" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.90665, 0, -2.27844)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Collisions/Parede5" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.19709, 0.471485, 0.421132)
shape = SubResource("BoxShape3D_kf405")

[node name="AnimationPlayer" parent="." index="6"]
libraries = {
"": SubResource("AnimationLibrary_yvkny")
}

[node name="End" type="Control" parent="." index="7"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="End" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="End/ColorRect" index="0"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 544.0
grow_horizontal = 2

[node name="Label" type="Label" parent="End/ColorRect/VBoxContainer" index="0"]
layout_mode = 2
text = "Credits:"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="End/ColorRect/VBoxContainer" index="1"]
layout_mode = 2
text = "Concrete 042A - ambientcg.com"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="End/ColorRect/VBoxContainer" index="2"]
layout_mode = 2
text = "Concrete 034 - ambientcg.com"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="End/ColorRect/VBoxContainer" index="3"]
layout_mode = 2
text = "Paving Stones 136 - ambientcg.com"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="End/ColorRect/VBoxContainer" index="4"]
layout_mode = 2
text = "Tiles 074 - ambientcg.com"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="End/ColorRect/VBoxContainer" index="5"]
layout_mode = 2
text = "Metal 012 - ambientcg.com"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="End/ColorRect/VBoxContainer" index="6"]
layout_mode = 2
text = "Metal 028 - ambientcg.com"
horizontal_alignment = 1

[node name="Label8" type="Label" parent="End/ColorRect/VBoxContainer" index="7"]
layout_mode = 2
text = "Wood Floor 043 - ambientcg.com"
horizontal_alignment = 1

[node name="Label9" type="Label" parent="End/ColorRect/VBoxContainer" index="8"]
layout_mode = 2
text = "Wood 066 - ambientcg.com"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="End/ColorRect/VBoxContainer" index="9"]
layout_mode = 2

[node name="Label10" type="Label" parent="End/ColorRect/VBoxContainer" index="10"]
layout_mode = 2
text = "Stylized Fur and Hair - texturecan.com"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="End/ColorRect/VBoxContainer" index="11"]
layout_mode = 2

[node name="Label11" type="Label" parent="End/ColorRect/VBoxContainer" index="12"]
layout_mode = 2
text = "Slow Motion Glass Shatter - freesound.org"
horizontal_alignment = 1

[node name="Label12" type="Label" parent="End/ColorRect/VBoxContainer" index="13"]
layout_mode = 2
text = "String Lightbulb on:off_1-2 - freesound.org"
horizontal_alignment = 1

[node name="Label13" type="Label" parent="End/ColorRect/VBoxContainer" index="14"]
layout_mode = 2
text = "Stingers and Stabs 001 - freesound.org"
horizontal_alignment = 1

[node name="Label14" type="Label" parent="End/ColorRect/VBoxContainer" index="15"]
layout_mode = 2
text = "Dog barking in the street (Chile) - freesound.org"
horizontal_alignment = 1

[node name="Label15" type="Label" parent="End/ColorRect/VBoxContainer" index="16"]
layout_mode = 2
text = "squeek doors - freesound.org"
horizontal_alignment = 1

[node name="Label16" type="Label" parent="End/ColorRect/VBoxContainer" index="17"]
layout_mode = 2
text = " My Gulp Recording #4- freesound.org"
horizontal_alignment = 1

[node name="Label17" type="Label" parent="End/ColorRect/VBoxContainer" index="18"]
layout_mode = 2
text = "Pouring water into a metal cup - freesound.org"
horizontal_alignment = 1

[node name="Label18" type="Label" parent="End/ColorRect/VBoxContainer" index="19"]
layout_mode = 2
text = "Bathroom door slam shut_more air - freesound.org"
horizontal_alignment = 1

[node name="Label19" type="Label" parent="End/ColorRect/VBoxContainer" index="20"]
layout_mode = 2
text = "Foot step (why is this flagged???) - freesound.org"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="End/ColorRect/VBoxContainer" index="21"]
layout_mode = 2

[node name="Label20" type="Label" parent="End/ColorRect/VBoxContainer" index="22"]
layout_mode = 2
text = "UI Prompts - thoseawesomeguys.com/prompts"
horizontal_alignment = 1

[node name="HSeparator5" type="HSeparator" parent="End/ColorRect/VBoxContainer" index="23"]
layout_mode = 2

[node name="Label23" type="Label" parent="End/ColorRect/VBoxContainer" index="24"]
layout_mode = 2
text = "Female voice during dog section - @EliTanthalos on Twitter dot com"
horizontal_alignment = 1

[node name="Label25" type="Label" parent="End/ColorRect/VBoxContainer" index="25"]
layout_mode = 2
text = "Male voice during dog section - @BalaDeSilver (Me! :D)"
horizontal_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="End/ColorRect/VBoxContainer" index="26"]
layout_mode = 2

[node name="Label24" type="Label" parent="End/ColorRect/VBoxContainer" index="27"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "End of Game Jam demo"
horizontal_alignment = 1

[node name="Label26" type="Label" parent="End/ColorRect/VBoxContainer" index="28"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "I didn't make a way to return to main menu, please close the game."
horizontal_alignment = 1

[connection signal="body_entered" from="Stand_Here" to="." method="_on_stand_here_body_entered"]
